--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build1.loader.js";
+      var loaderUrl = buildUrl + "/build2.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/build1.data.br",
-        frameworkUrl: buildUrl + "/build1.framework.js.br",
-        codeUrl: buildUrl + "/build1.wasm.br",
+        dataUrl: buildUrl + "/build2.data",
+        frameworkUrl: buildUrl + "/build2.framework.js",
+        codeUrl: buildUrl + "/build2.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "2098-901",
         productName: "VGD2425",
         productVersion: "1.0",
         showBanner: unityShowBanner,
